fix(layout): replace overflow-hidden with overflow-clip to allow position: sticky to work

--- a/src/app/(frontend)/globals-compiled.css
+++ b/src/app/(frontend)/globals-compiled.css
@@ -1244,6 +1244,9 @@
     text-overflow: ellipsis;
     white-space: nowrap;
   }
+  .overflow-clip {
+    overflow: clip;
+  }
   .overflow-hidden {
     overflow: hidden;
   }
